# barleywine

./: CLI-REFERENCE.md  CONFIG.md  Cargo.toml  EXAMPLES.md  LOGGING.md  README.md  Rocket.toml  barleywine.toml  test-cli.sh  test-config.toml
src/: cli.rs  config.rs  log.rs  main.rs  web.rs
tests/: cli.rs  test_logging.rs
webroot/: blog.md  index.html  index.md  readme.md  sample.md  script.js  styles.css  test.txt
webroot/blog/: index.md  post-1.md
webroot/subdir/: index.html
