[package]
name = "barleywine"
version = "0.1.0"
edition = "2024"
description = "A high-performance web platform that doesn't get in your way."

[dependencies]
markdown = "1.0"
rocket = "0.5.1"
structopt = "0.3.26"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
