[package]
name = "barleywine"
version = "0.1.0"
edition = "2024"
description = "A high-performance web platform that doesn't get in your way."
default-run = "barleywine"

[dependencies]
markdown = "1.0"
rocket = "0.5.1"
structopt = "0.3.26"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
simplelog = "0.12"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
